<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Tela_Login">

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="21sp"
        android:autofillHints="emailAddress"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/e_mail"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="21sp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        tools:ignore="Autofill,ObsoleteLayoutParam,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        tools:ignore="MissingConstraints,ObsoleteLayoutParam" />

    <Button
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/material_on_surface_disabled"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/transicaologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/material_on_surface_disabled"
        android:text="@string/do_you_have_an_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="MissingConstraints,ObsoleteLayoutParam,SpUsage" />

</LinearLayout>