<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Tela_Cadastro">

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/cardview_light_background"
        android:textSize="44sp"
        android:textStyle="bold"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignUp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:textSize="21sp"
        tools:ignore="ObsoleteLayoutParam,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textColorHint="@color/white"
        tools:ignore="ObsoleteLayoutParam,TextFields,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:hint="@string/passwor"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textSize="21sp"
        tools:ignore="ObsoleteLayoutParam,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:textSize="21sp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:hint="@string/password_again"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="ObsoleteLayoutParam,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/joinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/join"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/transicaocadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:backgroundTint="@color/material_on_surface_disabled"
        android:textSize="15sp"
        tools:ignore="MissingConstraints,ObsoleteLayoutParam" />

</LinearLayout>