<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Tela_Trancas">

    <TextView
        android:id="@+id/lockRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/lock_register"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/id_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lockRegister"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/lock_id"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:textSize="21sp"
        tools:ignore="ObsoleteLayoutParam,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/name_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_lock"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/nickname"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:textSize="21sp"
        tools:ignore="LabelFor,ObsoleteLayoutParam,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/pass_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_lock"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:hint="@string/passwor"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textSize="21sp"
        tools:ignore="ObsoleteLayoutParam,VisualLintTextFieldSize"
        android:autofillHints="" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_lock"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/go"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:backgroundTint="@color/material_on_surface_disabled"
        android:textSize="15sp"
        tools:ignore="MissingConstraints,ObsoleteLayoutParam" />

</LinearLayout>