<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroudp"
    tools:context=".Tela_Fechadura"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fechadura"
        android:layout_width="321dp"
        android:layout_height="104dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/fechadura"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/open_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fechadura"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/open_close"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/registros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/open_close"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/registration_data"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:backgroundTint="@color/material_on_surface_disabled"
        android:textSize="15sp"
        tools:ignore="MissingConstraints,ObsoleteLayoutParam" />


</LinearLayout>